<resources>
    <string name="app_name">7. Auflage der Naturmethode</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="HOME">"Home"
    </string>
    <string name="ENGELSKREIS">"Engelskreis"
    </string>
    <string name="TEUFELSKREIS">"Teufelskreis"
    </string>
    <string name="HOMEPAGE">"VERSTA-Homepage"
    </string>
    <string name="GRUNDWISSEN">"Grundwissen"
    </string>
    <string name="NATURMETHODE">"Naturmethode"
    </string>
    <string name="ACTOR">"Autor"
    </string>
    <string name="Conzept">""1.1 Konzept
    </string>
    <string name="FOREWORD">"Vorwort"
    </string>
    <string name="AboutActor">"Über den Autor"
    </string>
    <string name="AboutBook">"Über das Buch"
    </string>
    <string name="Autor_one">"Beat Meichtry"
    </string>
    <string name="Autor_two">" | Erwin Richter"
    </string>
    <string name="Book_title_one">"Von der Sprechangst"
    </string>
    <string name="Book_title_two">"zur Sprechfreude"
    </string>
    <string name="Button_one">"Einführung"
    </string>
    <string name="Button_two">""Engelskreis /\nTeufelskreis"
    </string>
    <string name="Button_three">"Vorwort"
    </string>
    <string name="Button_four">"Grundwissen"
    </string>
    <string name="Book_description">"Lehrgang zur nachhaltigen Behandlung von "
        "Sprechangst und des Symptoms «Stottern» basierend auf der natürlichen "
        "Sprechweise"</string>
    <string name="Konzept_wichtiges">"Vieles kann uns aus dem Gleichgewicht bringen, was sich "
        "wiederum auf unsere Sprechweise auswirkt. Den Weg in das Gleichgewicht zeigt dieses Buch."
    </string>
    <string name="Konzept_absatz_eins">"Eine ruhige, flüssige Sprechweise ist ausschliesslich im "
        "Gleichgewicht möglich. Wir wissen, dass jeder Mensch ohne organische Einschränkungen frei "
        "sprechen kann. Gelingt es uns, einen Gedanken überzeugend, mit all unseren Möglichkeiten "
        "von Körper, Atem und Spracheinsatz dem Gegenüber mitzuteilen, sind wir in der natürlichen "
        "Sprechweise. Fehlschaltungen haben in diesem Modus keinen Platz."
    </string>
    <string name="gut_zu_wissen">"Gut zu wissen"
    </string>
    <string name="Konzept_absatz_zwei">"Jeder Versuch, die Erwartungsangst oder das Vermeidungsprogramm "
        "zu beeinflussen, wirkt kontraproduktiv und hält das Symptom Stottern am Leben. Aus diesem "
        "Grund sind Sprachübungsbehandlungen, die später wieder verlernt werden müssen, nicht nur "
        "zwecklos, sondern im Grunde sogar sinnlos. Dies erkannte Helene Fernau Horn 1969."
        "\n\nWenn uns etwas aus dem Gleichgewicht bringt, wird als Folge davon im körperlichen Bereich "
        "als erstauftretendes Symptom die Atem- und Stimmgebungsblockade beobachtet. Dies ist nicht "
        "als krankhaftes, pathologisch sprachliches Symptom zu bezeichnen, sondern beschreibt "
        "lediglich einen logischen körperlichen Ablauf. Daher wird dies noch nicht als Störung "
        "angesehen."
        "\n\nMit dem Teufelskreis nach Helene Fernau Horn werden die Zusammenhänge, welche für die "
        "Sprachvermeidung sowie Sprechunflüssigkeiten ursächlich sind, dargestellt."
    </string>
    <string name="Engelskreis_bildquelle">"Engelskreis nach Beat Meichtry"
    </string>
    <string name="Engelskreis_beschreibung">"Im Engelskreis befinden wir uns im Gleichgewicht."
    </string>
    <string name="Engelskreis_gleichgewicht">"Günstige Abläufe werden im Engelskreis mit den grünen "
        "Wolken dargestellt. Als Folge von neuen, positiven Erlebnissen über die Hardware entwickelt "
        "sich in der Software das Bewusstsein «Ich habe Sprechfreude und Sprechlust». "
        "\n1. Dies führt zu einer entspannten Bauch-Atmung, die das Gefühl von Ruhe und Sicherheit auslöst. "
        "\n2. Diese Grundeinstellung motiviert, Ideen, Meinungen oder Antworten, in einer sicheren, "
        "durch Gesten gesteuerten, überzeugenden Sprechgewandtheit und Sprechfreude "
        "mitzuteilen. "
        "\nÜber den Engelskreis wird die Sprache in Komponenten zerlegt, um herauszufinden, welche "
        "für die Kommunikation notwendige n Fähigkeiten vorhanden sind. Die meisten Betroffenen "
        "erleben, dass eine bemerkenswerte Sprachkompetenz vorhanden ist."</string>
    <string name="Engelskreis_absatz_eins">"Das Erleben einer guten, sicheren Sprachkompetenz wird "
        "durch rhetorische Übungen verstärkt und als Erfolgserlebnis abgespeichert. Folgerichtig wird "
        "der blockierenden Erwartungsangst die «Nahrung» entzogen. "
        "\n\nDurch den Gewinn, immer öfters frei sprechen zu können, wird in der Software die Sprechsicherheit "
        "gestärkt. Ein zeitnaher Transfer in Alltagssituationen verstärkt dieses gute "
        "Gefühl. Die Sprechfreude und die Lust an der Sprache werden vermehrt, was wiederum das "
        "Programm «Sprechfreude» nährt und wichtiger macht."</string>
    <string name="Engelskreis_ueberschrit_zwei">"Sing- und Sprechmelodie:"
    </string>
    <string name="Engelskreis_absatz_zwei">"Die Mehrzahl betroffener Personen erleben beim Singen, "
        "oder wenn sie sich alleine im Raum befinden, das Gefühl der freien Sprache. "
        "\nSingen und Sprechen sind in organischer Beziehung zwei gleiche Funktionen. Es werden "
        "dieselben Organe und Muskeln benutzt. "
        "\n\nDas Singen ist ein natürlicher Vorgang. Willst du gesanglich etwas vortragen, so erinnerst du "
        "dich an die Melodie. Die Melodie ist eine definierte Abfolge von Tönen, die es zu treffen gilt. "
        "Durch die Zentrierung auf die Einhaltung dieser Töne verfolgst du einen genau vorgeschriebenen "
        "Ablauf, ein Programm. "
        "\nViele Melodien sind ausserdem zusätzlich in deiner Erinnerung aufbewahrt und mit guten "
        "Erlebnissen verbunden. Durch das Abrufen dieses Programms wird ein Voraushören der "
        "passenden Töne angestrebt. Es werden direkt alle notwendigen Automatismen zur Singmelodie "
        "eingeleitet. In der Naturmethode wird bei der Bildung der Sprechmelodie gleich "
        "vorgegangen, und diese wird mit der gleichen Begeisterung beim Sprechen eingesetzt. "
        "\nNebst der Bildung der Sprache sichern wir den Sprechklang bewusst ab. Einerseits findet "
        "die Absicherung des Schalls über das Gehör statt, andererseits durch das Wahrnehmen der "
        "Vibrationen über die knöchernen Verbindungen. "
        "\n\nEs wirkt unterstützend, wenn der Coach/Therapeut wie auch die Bezugsperson mit einer "
        "ruhigen, bewussten, natürlichen, mit Gestik gesteuerten Stimme klangvoll sprechen. Dadurch "
        "kann auch der Betroffene dies als Vorbild übernehmen. In Folge erlebt der Betroffene, "
        "wie sich diese Ruhe vorteilhaft auswirkt und übernimmt diese schrittweise automatisch. "
    </string>
    <string name="Engelskreis_ueberschrit_drei">
        "Im Engelskreis hat die Redeflussstörung schlicht keinen Platz, da die ganzen Ressourcen zur "
        "Produktion von überzeugenden Botschaften verwendet werden. "
    </string>
    <string name="Engelskreis_absatz_drei">
        "Durch Training werden Erfahrungen sowohl in der verbalen wie in der nonverbalen Kommunikation "
        "gestärkt. Dabei steht das Zurückgewinnen der Sprechfreude und der Sprechlust "
        "durch die Möglichkeit, sich sprachlich differenziert ausdrücken zu können, im Zentrum. Es "
        "wird für den Sender, den Sprechenden, sowie für den Empfänger, den Zuhörer, eine Freude. "
        "\n\nParallel zu neuen Sprecherlebnissen trainieren wir schrittweise die Reduktion von einer "
        "hohen in eine tiefere Spannung über den Einsatz von eintrainierten Techniken. Es sind "
        "verschiedene Techniken möglich. "
        "In unserem Kulturkreis hat sich das autogene Training bewährt, das von Dr. med. J.H. Schulz "
        "im 20. Jahrhundert entwickelt wurde und die Grundlage von Suggestionstechniken bildet. "
        "Diese dienen zur Verstärkung des Erlebens: "
        "«Ich werde sprachlich immer freier.» Das Programm «Sprechfreude» wird gestärkt, das "
        "Programm «Erwartungsangst» verliert die lähmende Wirkung. "
        "\n\nJederzeit ist es möglich, dass innere oder äussere Beeinflussung Erwartungsangst auslöst. "
        "Infolge dessen werden alte, unkoordinierte Muster wieder aktiviert und lösen die bekannte "
        "individuelle Stotter-Symptomatik blitzschnell aus. Rückfälle, die jedem jederzeit passieren "
        "können."</string>
    <string name="Engelskreis_ueberschrift_vier">"Für diesen Fall werden folgende Trainingseinheiten angeboten:"
    </string>
    <string name="Engelskreis_absatz_vier">"Durch das Arbeiten mit dem Buch setzen wir eine Basis "
        "von Sprechsicherheit. Durch laufenden Transfer in den Alltag wird diese bewusstgemacht und "
        "dadurch abgesichert. Das ist die Grundlage der neuen Sprechsicherheit und Sprechfreude. "
        "Dieses gute Gefühl stärkt, und Rückfälle gewinnen keine Bedeutung mehr. "
        "\n\nDurch die medizinische Entwicklung, besonders in den bildgebenden Verfahren, können "
        "Abläufe im Hirn nachgewiesen werden. Wenn du etwas regelmässig machst, bilden sich im "
        "Gehirn Verschaltungen. Wenn wir in der Sprache immer wieder positive Erfahrungen "
        "machen, vergessen wir die negativen Erfahrungen und gelangen in die freie Sprache. "
        "\nDie im Alltag erlebten Veränderungen können aus neurobiologischer Sicht mit Strassen "
        "verglichen werden. Am Anfang ist es nur ein kleiner Trampelpfad. Wenn die Verknüpfungen "
        "öfters «benutzt werden», werden diese Wege ein immer breiter und werden schliesslich zu "
        "einer Autobahn. Umgekehrt können wenig benützte Strassen verkümmern und zuwachsen, "
        "wenn diese Verschaltungen nicht mehr verwendet werden. "
        "\nDie menschlichen Entwicklungsphasen sind einzigartig. Grundlage jeder Entwicklung ist "
        "der Drang, neue Erkenntnisse zu machen. Dadurch vermehren sich die jeweiligen Möglichkeiten, "
        "die sogenannten Handlungsoptionen. Erst mehrere Handlungsoptionen ermöglichen "
        "eine Wahl. Wie in der Natur wird der am besten nutzbare Weg mit dem geringsten "
        "Widerstand ausgesucht. "
        "\nWenn es einem gelingt, beim Sprechen dem Gehirn einen besseren Weg anzubieten, wird es "
        "diesen gerne annehmen und nach und nach die Normalsprache übernehmen. Unser Lehrgang "
        "zielt ausdrücklich darauf hin, Redeflussstörungen nicht unmöglich, sondern unnötig "
        "zu machen. Betrachten wir eine Trainingseinheit: Im Speicher des Menschen befindet sich "
        "eine Unmenge von Vorstellungen. Diese Gedanken jemandem mitzuteilen, benötigt eine "
        "Vielzahl von notwendigen Teilschritten. Diese Koordination wird immer durch emotionale "
        "Umstände beeinflusst. Dies widerspiegelt die Persönlichkeit und macht uns einzigartig. "
        "Zusätzlich erleben die meisten in Stressmomenten eine momentane Sprachlosigkeit, "
        "sobald der Druck weg ist. "
        "\nDurch Rückfälle, die jedem passieren, werden alte Verschaltungen wieder aktiviert und lösen "
        "unkoordinierte Bewegungsmuster in Form einer individuellen Stotter-Symptomatik blitzschnell "
        "aus. "
        "\n\nDies sahen schon Rudolf Denhardt, Ronald Muirden, Erwin Richter und Norman Bush. Auch "
        "die Erfahrungen, die der Autor Beat Meichtry als Betroffener persönlich als auch seit 1988 "
        "als Kursleiter in den Intensiv-Modulen der VERSTA macht, bestätigen diese Erkenntnis."</string>
</resources>