<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AngelCircle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        android:padding="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/engelskreis_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/ENGELSKREIS"
                android:scaleType="center"
                android:src="@drawable/engelskreis_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="22dp"
                android:text="@string/Engelskreis_bildquelle"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_beschreibung"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_gleichgewicht"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_absatz_eins"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_ueberschrit_zwei"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_absatz_zwei"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#BEC5C5"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_ueberschrit_drei"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_absatz_drei"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_ueberschrift_vier"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/Engelskreis_absatz_vier"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_button"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HOME" />

            <Button
                android:id="@+id/about_actor_button"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ACTOR" />

        </LinearLayout>


    </LinearLayout>




</ScrollView>