<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about_actor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Autor_one"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Autor_two"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Book_title_one"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/Book_title_two"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="2">


        <Button
            android:id="@+id/about_book_button"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Button_one" />

        <Button
            android:id="@+id/angle_circle_button"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Button_two" />

        <Button
            android:id="@+id/foreword_button"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Button_three" />

        <Button
            android:id="@+id/grounding_button"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/Button_four" />

    </GridLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NATURMETHODE"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_description"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>