<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleOverview">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#BEC5C5"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Konzept_wichtiges"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/Konzept_absatz_eins"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/gut_zu_wissen"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/Konzept_absatz_zwei"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/angle_circle_button"
                    style="@android:style/Widget.Holo.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ENGELSKREIS" />

                <Button
                    android:id="@+id/vicious_circle_button"
                    style="@android:style/Widget.Holo.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TEUFELSKREIS" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>